--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
+    "thunk": "^0.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
